Fix slider bullets spacing

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -11,7 +11,7 @@ ul
     padding: 0
 
 .orbit-bullets button
-    @media screen and (max-width: 30em)
+    @media screen and (max-width: 60em)
         margin: 0.1rem 0.3rem
 
 .show-for-sr
